--- a/.github/workflows/nodejs.condo.ci.yml
+++ b/.github/workflows/nodejs.condo.ci.yml
@@ -121,6 +121,7 @@ jobs:
       address-service: ${{ steps.detect-changes.outputs.address-service }}
       dev-portal-api: ${{ steps.detect-changes.outputs.dev-portal-api }}
       meter-importer: ${{ steps.detect-changes.outputs.meter-importer }}
+      external-api: ${{ steps.detect-changes.outputs.external-api }}
       miniapp-utils: ${{ steps.detect-changes.outputs.miniapp-utils }}
       migrator: ${{ steps.detect-changes.outputs.migrator }}
       open-condo: ${{ steps.detect-changes.outputs.open-condo }}
@@ -151,6 +152,12 @@ jobs:
             meter-importer:
               - 'apps/meter-importer/**'
               - 'packages/**'
+            external-api:
+              - 'apps/external-api/**'
+              - 'apps/condo/domains/organization/schema/**'
+              - 'apps/condo/domains/ticket/schema/**'
+              - 'apps/condo/domains/billing/schema/**'
+              - 'apps/condo/domains/acquiring/schema/**'
             migrator:
               - 'packages/migrator/**'
             miniapp-utils:
@@ -512,6 +519,54 @@ jobs:
           yarn workspace @app/meter-importer start & \
           node bin/wait-apps-apis.js -f condo meter-importer) && \
           yarn workspace @app/meter-importer test"
+        env:
+          PROMETHEUS_RW_SERVER_URL: ${{ secrets.K6_PROMETHEUS_RW_SERVER_URL }}
+          PROMETHEUS_USER: ${{ secrets.K6_PROMETHEUS_USER }}
+          PROMETHEUS_PASSWORD: ${{ secrets.K6_PROMETHEUS_PASSWORD }}
+          GH_REF_NAME: ${{ github.event.pull_request.head.ref || github.ref_name }}
+
+  run-external-api-tests:
+    name: External API Tests
+    runs-on: ubuntu-22.04
+    needs:
+      - authorize
+      - build-image
+      - detect-changes
+    if: ${{ needs.detect-changes.outputs.external-api == 'true' }}
+    steps:
+      - name: Login to cloud registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ secrets.DOCKER_REGISTRY }}
+          username: ${{ secrets.SBERCLOUD_CR_USERNAME }}
+          password: ${{ secrets.SBERCLOUD_CR_PASSWORD }}
+      - name: Setup PG db
+        run: |
+          docker run -e POSTGRES_USER=$POSTGRES_USER -e POSTGRES_PASSWORD=$POSTGRES_PASSWORD -e POSTGRES_DB=$POSTGRES_DB -p="127.0.0.1:5432:5432" -d ${{ env.PG_IMAGE_FULL }}
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: main
+      - name: Setup Redis db
+        run: |
+          docker run -p="127.0.0.1:6379:6379" -d ${{ env.REDIS_IMAGE_FULL }}
+      - name: Run condo container with daemon
+        run: |
+          docker run --network="host" --name condo-container -dit ${{ env.DOCKER_IMAGE_FULL }} sh
+      - name: Prepare apps
+        run: |
+          docker exec condo-container node bin/prepare.js -f condo external-api
+      - name: Run apps and tests
+        run: |
+          docker exec condo-container sh -c "yarn workspace @app/condo start" &
+          docker exec condo-container sh -c "node bin/wait-apps-apis.js -f condo"
+          docker exec condo-container sh -c "yarn workspace @app/external-api start" &
+          docker exec \
+          -e PROMETHEUS_RW_SERVER_URL=$PROMETHEUS_RW_SERVER_URL \
+          -e PROMETHEUS_USER=$PROMETHEUS_USER \
+          -e PROMETHEUS_PASSWORD=$PROMETHEUS_PASSWORD \
+          -e GH_REF_NAME=$GH_REF_NAME \
+          condo-container sh -c "yarn workspace @app/external-api test"
         env:
           PROMETHEUS_RW_SERVER_URL: ${{ secrets.K6_PROMETHEUS_RW_SERVER_URL }}
           PROMETHEUS_USER: ${{ secrets.K6_PROMETHEUS_USER }}
