--- a/.github/workflows/remove_review.yaml
+++ b/.github/workflows/remove_review.yaml
@@ -3,7 +3,7 @@ name: Remove Review
 on:
   workflow_dispatch:
     branches:
-      - '/^review-.*$/'
+      - '*'
   delete:
     branches:
       - '*'
@@ -20,6 +20,11 @@ jobs:
           REF_NAME=${{ github.event.ref }}
           echo "REVIEW_NAMESPACE=$(echo review-${REF_NAME##*/} | sed 's/[^a-zA-Z0-9_-]//g; s/_/-/g')" >> $GITHUB_ENV
           echo "REVIEW_URL_PREFIX=$(echo ${GITHUB_REF##*/} | sed 's/[^a-zA-Z0-9_-]//g; s/_/-/g' | cut -c -30)" >> $GITHUB_ENV
+
+      - name: print env for namespace
+        run: |
+          echo "${{ env.REVIEW_NAMESPACE }}"
+          echo "${{ env.REVIEW_URL_PREFIX }}"
 
       - name: "Drop review namespace"
         run: |
