--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "yarn": ">=3.2.0"
   },
   "dependencies": {
+    "@telegram-apps/bridge": "^2.10.3",
     "commitlint-plugin-function-rules": "^1.3.2",
     "dd-trace": "4.46.0"
   },
