--- a/.github/workflows/deploy_review.yaml
+++ b/.github/workflows/deploy_review.yaml
@@ -71,6 +71,7 @@ jobs:
           WERF_SET_CI_NEWS_GREENHOUSE_URL: "global.ci_news_greenhouse_url=news-sharing-greendom.r.doma.ai"
           WERF_SET_CI_METER_IMPORTER_URL: "global.ci_meter_importer_url=meters-billing-integration.r.doma.ai"
           WERF_SET_CI_BILLING_CONNECTOR_URL: "global.ci_billing_connector_url=review-${{ env.REVIEW_URL_PREFIX }}-billing-connector.r.doma.ai"
+          WERF_SET_CI_RESIDENT_APP_URL: "global.ci_resident_app_url=review-${{ env.REVIEW_URL_PREFIX }}-m.r.doma.ai"
           WERF_SET_CI_RESIDENT_APP_BOT_URL: "global.ci_resident_app_bot_url=review-${{ env.REVIEW_URL_PREFIX }}-m.bot.r.doma.ai"
           WERF_SET_CI_NAMESPACE: "global.ci_namespace=${{ env.REVIEW_NAMESPACE }}"
           WERF_SET_CI_URL_PREFIX: "global.ci_url_prefix=${{ env.REVIEW_URL_PREFIX }}"
