chore(condo): INFRA-1093 mock external auth via passportjs

--- a/apps/condo/package.json
+++ b/apps/condo/package.json
@@ -106,6 +106,9 @@
     "nunjucks": "^3.2.4",
     "oidc-provider": "7.14.3",
     "openid-client": "4.7.4",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
+    "passport-oauth2": "^1.8.0",
     "pdf-lib": "^1.17.1",
     "pdfmake": "^0.2.10",
     "phone": "^3.1.41",
