feat(global): INFRA-1097 stupid loggers
The idea of this change is to obtain core information and auto-generate as much info as possible, so developer just call getLogger and that's it

--- a/packages/keystone/package.json
+++ b/packages/keystone/package.json
@@ -67,6 +67,7 @@
     "big.js": "^6.2.2",
     "body-parser": "^1.20.3",
     "bull": "^4.8.4",
+    "callsites": "^3.1.0",
     "connect-redis": "^6.0.0",
     "csv-parse": "^5.2.0",
     "cuid": "^2.1.8",
