--- a/apps/condo/package.json
+++ b/apps/condo/package.json
@@ -102,6 +102,7 @@
     "next": "^12.3.7",
     "next-transpile-modules": "^10.0.1",
     "next-with-less": "^2.0.5",
+    "nock": "^14.0.5",
     "node-fetch": "^2.6.7",
     "nunjucks": "^3.2.4",
     "oidc-provider": "7.14.3",
@@ -132,6 +133,7 @@
     "recheck": "^4.4.5",
     "redlock": "^5.0.0-beta.2",
     "slugify": "^1.6.6",
+    "supertest": "^7.1.3",
     "swr": "^1.3.0",
     "uuid": "^8.3.0",
     "validate.js": "^0.13.1",
