--- a/apps/condo/package.json
+++ b/apps/condo/package.json
@@ -107,6 +107,7 @@
     "oidc-provider": "7.14.3",
     "openid-client": "4.7.4",
     "passport": "^0.7.0",
+    "passport-custom": "^1.1.1",
     "passport-github2": "^0.1.12",
     "passport-openidconnect": "^0.1.2",
     "pdf-lib": "^1.17.1",
