--- a/packages/codegen/templates/app00/package.json
+++ b/packages/codegen/templates/app00/package.json
@@ -27,7 +27,7 @@
     "@apollo/client": "^3.11.8",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.10.0",
-    "@open-keystone/app-next": "^9.0.1",
+    "@open-keystone/app-next": "^9.0.0",
     "@open-condo/bridge": "workspace:^",
     "@open-condo/codegen": "workspace:^",
     "@open-condo/config": "workspace:^",
@@ -36,6 +36,8 @@
     "@open-condo/ui": "workspace:^",
     "@{{name}}/domains": "link:./domains",
     "@welldone-software/why-did-you-render": "^5.0.0-alpha.1",
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-less": "^1.0.1",
     "ajv": "8.11.0",
     "antd": "^4.24.12",
     "classnames": "^2.3.2",
@@ -50,7 +52,8 @@
     "immer": "9.0.13",
     "less": "^3.12.2",
     "lodash": "^4.17.21",
-    "next": "^15.4.5",
+    "next": "^15.4.1",
+    "next-transpile-modules": "^4.1.0",
     "numeral": "2.0.6",
     "qs": "^6.9.4",
     "rc-queue-anim": "^1.8.5",
