feat (condo): DOMA-11508 quality of registry (backend) (#6352)
* feat(condo): DOMA-11508 implement PullentiClient and createInstance for address processing

* feat(condo): DOMA-11508 implement create-billing-integration and create-acquiring-integration scripts for managing integrations

* feat(condo): DOMA-11508 add 'apps/rb' to CI jobs and update prepare script for registry-importer

* feat(integration): DOMA-11508 no deletedAt field within create-integration scripts

* feat(condo): DOMA-11508 change pull_request_target to pull_request for CI trigger

* feat(condo): DOMA-11508 change pull_request to pull_request_target back for CI trigger

* fix(condo): DOMA-11508 Increase Redis container databases to 64 in CI workflow

* feat(condo): DOMA-11508 Refactor Redis run command in CI workflow to use environment variable

* feat(condo): DOMA-11508 Refactor CI workflow to use REDIS_RUN_COMMAND environment variable for Redis startup

* feat(condo): DOMA-11508 Update registry-importer submodule to latest commit (mkdirp to dev dependencies)

* feat(address-service): DOMA-11508 fix yarn.lock

* feat(condo): DOMA-11508 return null instead of undefined within getJson() function

* feat(condo): DOMA-11508 add await to a couple places in bin scripts

* chore(condo): DOMA-11508 Update submodule

* chore(condo): DOMA-11508 Update submodule to master

--- a/.github/workflows/nodejs.condo.ci.yml
+++ b/.github/workflows/nodejs.condo.ci.yml
@@ -25,6 +25,7 @@ env:
   PG_IMAGE_FULL: ${{ secrets.DOCKER_REGISTRY }}/doma/utils/postgres:16.8
   REDIS_IMAGE_FULL: ${{ secrets.DOCKER_REGISTRY }}/doma/utils/redis:6.2
   REF: ${{ github.event.pull_request.head.sha || github.ref }}
+  REDIS_RUN_COMMAND: docker run -p="127.0.0.1:6379:6379" -d ${{ secrets.DOCKER_REGISTRY }}/doma/utils/redis:6.2 --databases 64
 
 jobs:
   authorize:
@@ -180,6 +181,7 @@ jobs:
               - 'packages/**'
             registry-importer:
               - 'apps/registry-importer/**'
+              - 'apps/rb'
               - 'packages/**'
             webhooks:
               - 'packages/webhooks/**'
@@ -354,7 +356,7 @@ jobs:
           POSTGRES_DB: main
       - name: Setup Redis db
         run: |
-          docker run -p="127.0.0.1:6379:6379" -d ${{ env.REDIS_IMAGE_FULL }}
+          ${{ env.REDIS_RUN_COMMAND }}
       - name: Run condo container with daemon
         run: |
           docker run --network="host" --name condo-container -dit ${{ env.DOCKER_IMAGE_FULL }} sh
@@ -437,7 +439,7 @@ jobs:
           POSTGRES_DB: main
       - name: Setup Redis db
         run: |
-          docker run -p="127.0.0.1:6379:6379" -d ${{ env.REDIS_IMAGE_FULL }}
+          ${{ env.REDIS_RUN_COMMAND }}
       - name: Run condo container with daemon
         run: |
           mkdir test_logs
@@ -505,7 +507,7 @@ jobs:
           POSTGRES_DB: main
       - name: Setup Redis db
         run: |
-          docker run -p="127.0.0.1:6379:6379" -d ${{ env.REDIS_IMAGE_FULL }}
+          ${{ env.REDIS_RUN_COMMAND }}
       - name: Run condo container with daemon
         run: |
           docker run --network="host" --name condo-container -dit ${{ env.DOCKER_IMAGE_FULL }} sh
@@ -557,7 +559,7 @@ jobs:
           POSTGRES_DB: main
       - name: Setup Redis db
         run: |
-          docker run -p="127.0.0.1:6379:6379" -d ${{ env.REDIS_IMAGE_FULL }}
+          ${{ env.REDIS_RUN_COMMAND }}
       - name: Run condo container with daemon
         run: |
           docker run --network="host" --name condo-container -dit ${{ env.DOCKER_IMAGE_FULL }} sh
@@ -609,7 +611,7 @@ jobs:
           POSTGRES_DB: main
       - name: Setup Redis db
         run: |
-          docker run -p="127.0.0.1:6379:6379" -d ${{ env.REDIS_IMAGE_FULL }}
+          ${{ env.REDIS_RUN_COMMAND }}
       - name: Run condo container with daemon
         run: |
           docker run --network="host" --name condo-container -dit ${{ env.DOCKER_IMAGE_FULL }} sh
@@ -711,7 +713,7 @@ jobs:
           POSTGRES_DB: main
       - name: Setup Redis db
         run: |
-          docker run -p="127.0.0.1:6379:6379" -d ${{ env.REDIS_IMAGE_FULL }}
+          ${{ env.REDIS_RUN_COMMAND }}
       - name: Run condo container with daemon
         run: |
           docker run --network="host" --name condo-container -dit ${{ env.DOCKER_IMAGE_FULL }} sh
@@ -763,13 +765,13 @@ jobs:
           POSTGRES_DB: main
       - name: Setup Redis db
         run: |
-          docker run -p="127.0.0.1:6379:6379" -d ${{ env.REDIS_IMAGE_FULL }}
+          ${{ env.REDIS_RUN_COMMAND }}
       - name: Run condo container with daemon
         run: |
           docker run --network="host" --name condo-container -dit ${{ env.DOCKER_IMAGE_FULL }} sh
       - name: Prepare apps
         run: |
-          docker exec condo-container node bin/prepare.js -f condo registry-importer
+          docker exec condo-container node bin/prepare.js -f condo registry-importer rb
       - name: Check migrations state
         run: |
           docker exec condo-container yarn workspace @app/registry-importer makemigrations --check
@@ -782,8 +784,9 @@ jobs:
           -e GH_REF_NAME=$GH_REF_NAME \
           condo-container sh -c "(\
           yarn workspace @app/condo start & \
+          yarn workspace @app/rb start & \
           yarn workspace @app/registry-importer start & \
-          node bin/wait-apps-apis.js -f condo registry-importer) && \
+          node bin/wait-apps-apis.js -f condo registry-importer rb) && \
           yarn workspace @app/registry-importer test"
         env:
           PROMETHEUS_RW_SERVER_URL: ${{ secrets.K6_PROMETHEUS_RW_SERVER_URL }}
