--- a/.github/workflows/nodejs.condo.ci.yml
+++ b/.github/workflows/nodejs.condo.ci.yml
@@ -130,6 +130,7 @@ jobs:
       rb: ${{ steps.detect-changes.outputs.rb }}
       registry-importer: ${{ steps.detect-changes.outputs.registry-importer }}
       webhooks: ${{ steps.detect-changes.outputs.webhooks }}
+      pos-integration: ${{ steps.detect-changes.outputs.pos-integration }}
     steps:
       - name: Checkout code with submodules
         uses: actions/checkout@v4
@@ -174,6 +175,11 @@ jobs:
               - '**/*.md'
               - '*'
               - '!.helm/**'
+            pos-integration:
+              - 'apps/pos-integration/**'
+              - 'packages/**'
+              - 'apps/condo/domains/acquiring/**'
+              - 'apps/condo/domains/billing/**'
             rb:
               - 'apps/rb'
               - 'apps/condo/domains/acquiring/**'
@@ -581,6 +587,58 @@ jobs:
           yarn workspace @app/meter-importer start & \
           node bin/wait-apps-apis.js -f condo meter-importer) && \
           yarn workspace @app/meter-importer test"
+        env:
+          PROMETHEUS_RW_SERVER_URL: ${{ secrets.K6_PROMETHEUS_RW_SERVER_URL }}
+          PROMETHEUS_USER: ${{ secrets.K6_PROMETHEUS_USER }}
+          PROMETHEUS_PASSWORD: ${{ secrets.K6_PROMETHEUS_PASSWORD }}
+          GH_REF_NAME: ${{ github.event.pull_request.head.ref || github.ref_name }}
+
+  run-pos-integration-tests:
+    name: Pos-integration Tests
+    runs-on: ubuntu-22.04
+    needs:
+      - authorize
+      - build-image
+      - detect-changes
+    if: ${{ needs.detect-changes.outputs.pos-integration == 'true' }}
+    steps:
+      - name: Login to cloud registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ secrets.DOCKER_REGISTRY }}
+          username: ${{ secrets.SBERCLOUD_CR_USERNAME }}
+          password: ${{ secrets.SBERCLOUD_CR_PASSWORD }}
+      - name: Setup PG db
+        run: |
+          docker run -e POSTGRES_USER=$POSTGRES_USER -e POSTGRES_PASSWORD=$POSTGRES_PASSWORD -e POSTGRES_DB=$POSTGRES_DB -p="127.0.0.1:5432:5432" -d ${{ env.PG_IMAGE_FULL }}
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: main
+      - name: Setup Redis db
+        run: |
+          ${{ env.REDIS_RUN_COMMAND }}
+      - name: Run condo container with daemon
+        run: |
+          docker run --network="host" --name condo-container -dit ${{ env.DOCKER_IMAGE_FULL }} sh
+      - name: Prepare apps
+        run: |
+          docker exec condo-container node bin/prepare.js -f condo pos-integration
+      - name: Check migrations state
+        run: |
+          docker exec condo-container yarn workspace @app/pos-integration makemigrations --check
+      - name: Run apps and tests
+        run: |
+          docker exec \
+          -e PROMETHEUS_RW_SERVER_URL=$PROMETHEUS_RW_SERVER_URL \
+          -e PROMETHEUS_USER=$PROMETHEUS_USER \
+          -e PROMETHEUS_PASSWORD=$PROMETHEUS_PASSWORD \
+          -e GH_REF_NAME=$GH_REF_NAME \
+          condo-container sh -c "(\
+          yarn workspace @app/condo start & \
+          yarn workspace @app/pos-integration start & \
+          node bin/wait-apps-apis.js -f condo pos-integration) && \
+          yarn workspace @app/pos-integration test"
         env:
           PROMETHEUS_RW_SERVER_URL: ${{ secrets.K6_PROMETHEUS_RW_SERVER_URL }}
           PROMETHEUS_USER: ${{ secrets.K6_PROMETHEUS_USER }}
