feat(condo): DOMA-12014 base miniapp for cloud pos integration (#6460)
* feat(condo): DOMA-12014 add miniapp for POS integration

* feat(condo): DOMA-12014 github workflows for pos-integration

* feat(condo): DOMA-12014 envs for pos-integration

* feat(condo): DOMA-12014 update submodules

* feat(condo): DOMA-12014 update submodule (use dayjs)

* fix(condo): DOMA-12014 httpbin.org returns errors too often. Moved to httpbingo for testing oidc redirect

* fix(condo): DOMA-12014 fix typo in envs

* feat(condo): DOMA-12014 update submodules to master

--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "apps/ticket-importer"]
 	path = apps/ticket-importer
 	url = git@github.com:open-condo-software/condo-ticket-importer.git
+[submodule "apps/pos-integration"]
+	path = apps/pos-integration
+	url = git@github.com:open-condo-software/pos-integration.git
