--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lint:styles": "yarn run stylelint \"**/*.{less,css}\"",
     "lint:code:fix": "yarn run eslint --fix .",
     "lint:translations": "turbo run lint-translations",
-    "lint:deps": "turbo boundaries --filter=!'@app/condo' --filter=!'@open-condo/codegen' && knip",
+    "lint:deps": "turbo boundaries --filter=!'@app/condo' --filter=!'@open-condo/codegen' && NODE_OPTIONS=\"--max_old_space_size=6144\" knip",
     "lint": "yarn lint:code && yarn lint:styles && yarn lint:translations && yarn lint:deps",
     "createapp": "node ./bin/createapp",
     "prepare": "husky install"
