--- a/.github/workflows/deploy_review.yaml
+++ b/.github/workflows/deploy_review.yaml
@@ -16,15 +16,12 @@ jobs:
     steps:
 
       - name: Echo review namespaces
-        run: echo "$(kubectl --kubeconfig <(echo $KUBE_CONFIG_BASE64_DATA | base64 --decode) get ns | grep "review-" -c)"
+        run: echo "Active review stands = $(kubectl --kubeconfig <(echo $KUBE_CONFIG_BASE64_DATA | base64 --decode) get ns | grep "review-" -c)"
       - name: Check review limits
         run: |
-          echo "Try to check review limits"
-          # review_namespaces=$(kubectl --kubeconfig <(echo $KUBE_CONFIG_BASE64_DATA | base64 --decode) get ns | grep "review-" -c)
-          # echo "active review namespaces = ${review_namespaces}"
           if [[ $review_namespaces == $(kubectl --kubeconfig <(echo $KUBE_CONFIG_BASE64_DATA | base64 --decode) get ns | grep "review-" -c) ]]; then
             echo "The maximum number of simultaneous reviews has been reached.";
-            exit 77;
+            exit 1;
           fi
 
       - name: Login to Container Registry
