fix(global): INFRA-1165 add missing build:deps script for deploying ks-dependent modules

--- a/werf.yaml
+++ b/werf.yaml
@@ -774,6 +774,7 @@ shell:
     - "echo 'REDIS_URL=undefined' >> /app/.env"
     - "echo 'NODE_ENV=production' >> /app/.env"
     - "echo 'FILE_FIELD_ADAPTER=local' >> /app/.env"
+    - "yarn workspace @app/employee-bot build:deps"
     - "yarn workspace @app/employee-bot build"
     - "rm -rf /app/.env"
     - "rm -rf /app/.config"
@@ -818,6 +819,7 @@ shell:
     - "echo 'REDIS_URL=undefined' >> /app/.env"
     - "echo 'NODE_ENV=production' >> /app/.env"
     - "echo 'FILE_FIELD_ADAPTER=local' >> /app/.env"
+    - "yarn workspace @app/ticket-importer build:deps"
     - "yarn workspace @app/ticket-importer build"
     - "rm -rf /app/.env"
     - "rm -rf /app/.config"
