--- a/.github/workflows/deploy_review.yaml
+++ b/.github/workflows/deploy_review.yaml
@@ -68,6 +68,8 @@ jobs:
           WERF_SET_CI_TELEPHONY_URL: "global.ci_telephony_url=review-${{ env.REVIEW_URL_PREFIX }}-telephony.r.doma.ai"
           WERF_SET_CI_DEV_PORTAL_WEB_URL: "global.ci_dev_portal_web_url=review-${{ env.REVIEW_URL_PREFIX }}-developers.r.doma.ai"
           WERF_SET_CI_PASS_URL: "global.ci_pass_url=review-${{ env.REVIEW_URL_PREFIX }}-miniapp-pass.r.doma.ai"
+          WERF_SET_CI_RESIDENT_APP_URL: "global.ci_resident_app_url=m.r.doma.ai"
+          WERF_SET_CI_RESIDENT_APP_BOT_URL: "global.ci_resident_app_bot_url=m-bot.r.doma.ai"
           WERF_SET_CI_NEWS_GREENHOUSE_URL: "global.ci_news_greenhouse_url=news-sharing-greendom.r.doma.ai"
           WERF_SET_CI_METER_IMPORTER_URL: "global.ci_meter_importer_url=meters-billing-integration.r.doma.ai"
           WERF_SET_CI_BILLING_CONNECTOR_URL: "global.ci_billing_connector_url=review-${{ env.REVIEW_URL_PREFIX }}-billing-connector.r.doma.ai"
