--- a/.github/workflows/deploy_stage.yaml
+++ b/.github/workflows/deploy_stage.yaml
@@ -64,6 +64,7 @@ jobs:
           WERF_SET_CI_TICKET_IMPORTER_URL: "global.ci_ticket_importer_url=eds-integration.s1.doma.ai"
           WERF_SET_CI_EXTERNAL_API_URL: "global.ci_external_api_url=bank-rest-api.s1.doma.ai"
           WERF_SET_CI_RESIDENT_APP_URL: "global.ci_resident_app_url=m.s1.doma.ai"
+          WERF_SET_CI_RESIDENT_APP_BOT_URL: "global.ci_resident_app_bot_url=m-bot.s1.doma.ai"
           WERF_SET_CI_ANNOUNCEMENT_GENERATOR_URL: "global.ci_announcement_url=announcement-generator.s1.doma.ai"
           WERF_SET_CI_NEWS_GREENHOUSE_URL: "global.ci_news_greenhouse_url=news-sharing-greendom.s1.doma.ai"
           WERF_SET_CI_METER_IMPORTER_URL: "global.ci_meter_importer_url=meters-billing-integration.s1.doma.ai"
